<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/navigation_header_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUserEmail"
        android:paddingTop="15dp"
        android:textSize="15sp"
        android:text="test@example.com"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#D3D3D3"/>

</LinearLayout>