<resources>
    <string name="app_name">HKMilkTeaApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="textViewMain1">
        Hong Kong-style milk tea, as known as “Silk Stocking Milk Tea”, is one of the most iconic drinks that represents Hong Kong. It is a fusion that brings western and eastern culture together, just like Hong Kong itself.
    </string>
    <string name="textViewMain2">
        British milk tea was introduced to Hong Kong soon after Hong Kong became a British colony in 1842. As fresh milk is expensive and not commonly used in Chinese cuisine, food stalls replicate their own version of milk tea in a lower cost. It soon became very popular among the grassroots with a booming success. Hong Kong-style milk tea is now a classic drink that can easily be found in differ
...
